<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    app:alignItems="center"
    app:flexDirection="row"
    app:flexWrap="wrap"
    app:justifyContent="flex_start">

    <!--Toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerColor">

            <ImageView
                android:id="@+id/arrow_back_icon"
                android:layout_width="@dimen/header_image"
                android:layout_height="@dimen/header_image"
                android:src="@drawable/arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center|center_horizontal"
                android:text="Checkout"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/transaction_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/spacing"
        android:fontFamily="@font/roboto"
        android:text="@string/trans_date"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/spacing"
        android:fontFamily="@font/roboto"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        tools:text="Transaction Date " />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">

        <!--location icon-->
        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/spacing"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_location"
            tools:ignore="VectorDrawableCompat" />

        <!--delivery address text-->
        <TextView
            android:id="@+id/delivery_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:text="@string/delivery_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />


        <TextView
            android:id="@+id/delivery_address"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/black"
            android:paddingLeft="10dp"/>

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">

        <!--request text -->
        <TextView
            android:id="@+id/request_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:text="@string/request"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <!--input request -->
        <EditText
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:hint="@string/request_hint"
            android:inputType="textLongMessage"
            android:background="@drawable/edit_text_border"
            android:paddingLeft="5dp"/>

        <!--optional request text -->
        <TextView
            android:id="@+id/optional_request_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/optional_request"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </com.google.android.flexbox.FlexboxLayout>
<!--<androidx.cardview.widget.CardView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content">-->

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="column"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">

        <!--payment method text -->
        <TextView
            android:id="@+id/payment_text"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:text="@string/payment"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/optional_request_text" />

        <RadioGroup
            android:id="@+id/payment_options"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_fpx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/orange"
                android:drawableStart="@drawable/ic_fpx"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/fpx_payment" />

            <RadioButton
                android:id="@+id/option_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/orange"
                android:drawableStart="@drawable/ic_cash"
                android:drawablePadding="15dp"
                android:text="@string/cash_payment" />

            <RadioButton
                android:id="@+id/option_credit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/orange"
                android:drawableLeft="@drawable/ic_credit"
                android:drawablePadding="20dp"
                android:text="@string/credit_payment" />
        </RadioGroup>

    </com.google.android.flexbox.FlexboxLayout>
</androidx.cardview.widget.CardView>
<!--</androidx.cardview.widget.CardView>-->
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">

        <TextView
            android:id="@+id/ringgit"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ringgit"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <!--subtotal-->
        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/subtotal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/subtotal_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </com.google.android.flexbox.FlexboxLayout>


    <!--shipping fees-->

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">

        <TextView
            android:id="@+id/shipping_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:text="@string/shipping"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/shipping_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />


    </com.google.android.flexbox.FlexboxLayout>

    <!--total amount-->
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start">

        <TextView
            android:id="@+id/total_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/final_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="@dimen/spacing"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </com.google.android.flexbox.FlexboxLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:layout_alignSelf="flex_end">

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/roboto"
            android:onClick="placeOrder"
            android:text="@string/place_order"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size"
            app:backgroundTint="#FF9800" />
    </com.google.android.flexbox.FlexboxLayout>

</com.google.android.flexbox.FlexboxLayout>