<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/checkout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerColor">

            <ImageView
                android:id="@+id/arrow_back_icon"
                android:layout_width="@dimen/header_image"
                android:layout_height="@dimen/header_image"
                android:src="@drawable/arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="center|center_horizontal"
                android:text="Checkout"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <TextView
                    android:id="@+id/transaction_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/spacing"
                    android:fontFamily="@font/maven_pro"
                    android:text="@string/trans_date"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/transaction_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="@dimen/spacing"
                    android:fontFamily="@font/maven_pro"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    tools:text="Transaction Date " />

            </com.google.android.flexbox.FlexboxLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignItems="center"
                    app:flexDirection="row"
                    app:flexWrap="wrap"
                    app:justifyContent="flex_start">

                    <ImageView
                        android:id="@+id/icon_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="@dimen/spacing"
                        android:importantForAccessibility="no"
                        app:srcCompat="@drawable/ic_location"
                        tools:ignore="VectorDrawableCompat" />

                    <!--delivery address text-->
                    <TextView
                        android:id="@+id/delivery_address_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="@dimen/spacing"
                        android:fontFamily="@font/maven_pro"
                        android:text="@string/delivery_address"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />

                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edit_text_border"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black" />


            </LinearLayout>

            <!--request text -->
            <TextView
                android:id="@+id/request_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/spacing"
                android:fontFamily="@font/maven_pro"
                android:text="@string/request"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/edit_text_border"
                android:gravity="start|top"
                android:hint="@string/request_hint"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/optional_request_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/maven_pro"
                android:text="@string/optional_request"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/maven_pro"
                android:text="@string/payment"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/payment_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/option_fpx"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:buttonTint="@color/orange"
                            android:drawableStart="@drawable/ic_fpx"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/maven_pro"
                            android:text="@string/fpx_payment"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/option_cash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:buttonTint="@color/orange"
                            android:drawableStart="@drawable/ic_cash"
                            android:drawablePadding="15dp"
                            android:fontFamily="@font/maven_pro"
                            android:text="@string/cash_payment"
                            android:textSize="18sp" />


                        <RadioButton
                            android:id="@+id/option_credit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:buttonTint="@color/orange"
                            android:drawableLeft="@drawable/ic_credit"
                            android:drawablePadding="20dp"
                            android:fontFamily="@font/maven_pro"
                            android:text="@string/credit_payment"
                            android:textSize="18sp" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/maven_pro"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/ringgit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/maven_pro"
            android:text="@string/ringgit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />


    </com.google.android.flexbox.FlexboxLayout>
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <TextView
                    android:id="@+id/subtotal_text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/maven_pro"
                    android:text="@string/subtotal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/subtotal_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/maven_pro"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </com.google.android.flexbox.FlexboxLayout>


            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <TextView
                    android:id="@+id/shipping_text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/shipping"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/shipping_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/maven_pro"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />


            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <TextView
                    android:id="@+id/total_text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/maven_pro"
                    android:text="@string/total"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/final_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/maven_pro"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </com.google.android.flexbox.FlexboxLayout>
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/done_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/rounded_corners"
                    android:fontFamily="@font/maven_pro"
                    android:onClick="placeOrder"
                    android:text="@string/place_order"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_size"
                    app:backgroundTint="#FF9800" />
            </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>









